2003-01-30  Bruno Haible  <bruno@clisp.org>

	* printf-args.h: New file, from GNU gettext.
	* printf-args.c: New file, from GNU gettext.
	* printf-parse.h: New file, from GNU gettext.
	* printf-parse.c: New file, from GNU gettext.
	* vasnprintf.h: New file, from GNU gettext.
	* vasnprintf.c: New file, from GNU gettext.
	* asnprintf.c: New file, from GNU gettext.
	* vasprintf.h: New file, from GNU gettext with modifications.
	* vasprintf.c: New file, from GNU gettext.
	* asprintf.c: New file, from GNU gettext.

2003-01-29  Bruno Haible  <bruno@clisp.org>

	* stpncpy.h: New file, from GNU gettext with modifications.
	* stpncpy.c: New file, from GNU gettext with modifications.

2003-01-28  Bruno Haible  <bruno@clisp.org>

	* c-ctype.h: New file, from GNU gettext, with changes suggested by
	Paul Eggert.
	* c-ctype.c: New file, from GNU gettext, with changes suggested by
	Paul Eggert.

2003-01-27  Bruno Haible  <bruno@clisp.org>

	* xsetenv.h: New file, from GNU gettext.
	* xsetenv.c: New file, from GNU gettext.

2003-01-23  Bruno Haible  <bruno@clisp.org>

	* minmax.h: New file, from GNU gettext, with comments from Paul Eggert.

2003-01-22  Bruno Haible  <bruno@clisp.org>

	* exit.h: New file, from GNU gettext.

2003-01-11  Bruno Haible  <bruno@clisp.org>

	* stpcpy.h (stpcpy): Use ANSI C function declarations.
	* strcase.h (strcasecmp, strncasecmp): Likewise.

2003-01-14  Jim Meyering  <jim@meyering.net>

	* same.c (same_name): Tweak a comment.

2003-01-11  Bruno Haible  <bruno@clisp.org>

	* same.c (same_name): Reorder tests so as to avoid calling stat()
	when a string comparison is sufficient.

2003-01-11  Bruno Haible  <bruno@clisp.org>

	* readtokens.c (readtoken): Cast character to 'unsigned char', not
	'unsigned int'.

2003-01-11  Bruno Haible  <bruno@clisp.org>

	* hash-pjw.c: Add comment about low quality of this function.

2003-01-12  Paul Eggert  <eggert@twinsun.com>

	Finish renaming getstr -> getdelim2 and readline -> readlinebuffer,