@@ -1,5 +1,5 @@
-# strtod.m4 serial 1
-dnl Copyright (C) 2002 Free Software Foundation, Inc.
+# strtod.m4 serial 2
+dnl Copyright (C) 2002-2003 Free Software Foundation, Inc.
 dnl This file is free software, distributed under the terms of the GNU
 dnl General Public License.  As a special exception to the GNU General
 dnl Public License, this file may be distributed as part of a program
@@ -10,6 +10,8 @@ AC_DEFUN([gl_FUNC_STRTOD],
 [
   AC_REQUIRE([AC_FUNC_STRTOD])
   if test $ac_cv_func_strtod = no; then
+    AC_DEFINE(strtod, rpl_strtod,
+      [Define to rpl_strtod if the replacement function should be used.])
     gl_PREREQ_STRTOD
   fi
 ])
