@@ -1,4 +1,4 @@
-#serial 4
+#serial 5
 
 dnl From Jim Meyering
 dnl Replace the utime function on systems that need it.
@@ -10,6 +10,8 @@ AC_DEFUN([jm_FUNC_UTIME],
   AC_REQUIRE([AC_FUNC_UTIME_NULL])
   if test $ac_cv_func_utime_null = no; then
     AC_LIBOBJ(utime)
+    AC_DEFINE(utime, rpl_utime,
+      [Define to rpl_utime if the replacement function should be used.])
     gl_PREREQ_UTIME
   fi
 ])
