@@ -1,3 +1,8 @@
+2003-01-31  Bruno Haible  <bruno@clisp.org>
+
+	* rename.c: #undef rename before defining rpl_rename.
+	* strnlen.c: #undef strnlen, define rpl_strnlen instead of strnlen.
+
 2003-01-30  Bruno Haible  <bruno@clisp.org>
 
 	* printf-args.h: New file, from GNU gettext.
